2013-08-29  Cedric Bail

	* Evas: use mmap/munmap to allocate surface.

2013-08-27  Jaehyun Cho

	* Edje: Fix edje play sample parameter checking.

2013-08-27  Tom Hacohen

	* Evas bidi: Fixed a bug causing BiDi not to work in some cases.

2013-08-20  David Seikel (onefang)

	* Edje Lua: Check for both Lua 5.1 and 5.2.

2013-08-13  Jihoon Kim

	* Ecore_IMF: add ecore_imf_context_input_panel_on_demand_set/get()

2013-08-09  Cedric Bail

	* Edje: add edje_object_mmap_set().

2013-08-08  Tom Hacohen

	* Evas textblock:  Make the ellipsis format the same as the surrounding.

2013-08-07  Tom Hacohen

	* Evas textblock: Use max ascent/descent at the edges of the textblock.

2013-08-07  Chris Michael

        * EFL: Require at least version 1.2 of the various wayland libraries to build EFL with wayland support.

2013-08-02  Yury Usischev

        * Add neon optimizations for several scaling/map routines in evas

2013-08-02  Cedric Bail

        * Evas: change mapping policy for image loader (RANDOM during header,
        SEQUENTIAL or WILLNEED during pixels reading).

2013-08-01  Cedric Bail

        * Edje: faster load time for Edje_Object using Evas_Object_Textblocks and many styles.

2013-07-31  Carsten Haitzler (The Rasterman)

        * Fix efl to use key not keyname (so xmodmap works).

2013-07-31  Cedric Bail

	* Eina: add eina_file_refresh(), eina_file_virtualize() and eina_file_virtual().
	* Evas: use eina_file_virtualize() for evas_object_image_memfile_set().
	* Emotion: fix backend priority order.

2013-07-25  ChunEon Park (Hermet)

        * Evas: Skip the map rendering if all points are transparent.

2013-07-24  Mike Blumenkrantz

        * Ecore-Evas: fix usage of underlying X window after it has received a destroy event

2013-07-22 Jiyoun Park

        * Evas: fix infinite loop if app use ecore evas image

2013-07-23  Yury Usischev

        * Fix a long-standing off-by-1 in the C MUL4_SYM "simd" multiplier.

2013-07-22 José Roberto de Souza
